[gd_scene load_steps=12 format=2]

[ext_resource path="res://Levels/Switch2.gd" type="Script" id=1]
[ext_resource path="res://Levels/Tileset/SparkForestLevels/Switch-8.png" type="Texture" id=2]
[ext_resource path="res://Levels/Tileset/SparkForestLevels/Switch-1.png" type="Texture" id=3]
[ext_resource path="res://Levels/Tileset/SparkForestLevels/Switch-2.png" type="Texture" id=4]
[ext_resource path="res://Levels/Tileset/SparkForestLevels/Switch-3.png" type="Texture" id=5]
[ext_resource path="res://Levels/Tileset/SparkForestLevels/Switch-4.png" type="Texture" id=6]
[ext_resource path="res://Levels/Tileset/SparkForestLevels/Switch-5.png" type="Texture" id=7]
[ext_resource path="res://Levels/Tileset/SparkForestLevels/Switch-6.png" type="Texture" id=8]
[ext_resource path="res://Levels/Tileset/SparkForestLevels/Switch-7.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Neutral",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 2 ) ],
"loop": true,
"name": "Interact",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Ending",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 84.5522
height = 518.224

[node name="World" type="Node2D"]

[node name="Switch2" type="Area2D" parent="." groups=["Switch"]]
position = Vector2( -18.372, 484.353 )
collision_layer = 10
collision_mask = 10
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Switch2"]
position = Vector2( 5.43408, -489.062 )
frames = SubResource( 1 )
animation = "Neutral"
speed_scale = 2.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Switch2"]
position = Vector2( 281.033, -97.7842 )
rotation = 1.20411
shape = SubResource( 2 )

[connection signal="area_entered" from="Switch2" to="Switch2" method="_on_Switch2_area_entered"]
[connection signal="body_entered" from="Switch2" to="Switch2" method="_on_Switch2_body_entered"]
[connection signal="animation_finished" from="Switch2/AnimatedSprite" to="Switch2" method="_on_AnimatedSprite_animation_finished"]
